Add a missing the in about.html

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 				<!-- about peeps -->
 				<div class="post text">
 					 <div class="dateline">Patrick Raynor</div>
-					 <p>is founder and current all seeing creative director and technologist.</p>
+					 <p>is the founder and current all seeing creative director and technologist.</p>
 				</div>
 				
  			</div>
