--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<!-- main page -->
 	<div class="page">
 		<!-- logo -->
-		<div class="reset" id="wordmark"><a href="https://www.flamingent.com/">Flaming Entertainment</a></div>
+		<div class="reset" id="wordmark"><a href="http://flamingent.com/">Flaming Entertainment</a></div>
 
 		<!-- welcome heading -->
 		<h2 class="welcome">Flaming Entertainment is a small but firey video game studio.<br/>We are working on <strong><a href="http://www.flamingent.com/trigger">Trigger</a></strong> on a custom id Tech based engine called <strong><a href="http://www.flamingent.com/cake">Cake</a></strong>.</h2>
