--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 					<a href="http://facebook.com/FlamingEntGames">
 						<i class="fi-social-facebook facebook"></i>
 					</a>
+					<a href="mailto:info@flamingent.com">
+						<i class="fi-mail email"></i>
+					</a>
 				</span>
 			</li>
 			<li>
