Adding new footer to html and css

--- a/about.html
+++ b/about.html
@@ -48,23 +48,23 @@
 
 		<!-- about header -->
 		<h1 class="subhead">About</h1>
-			<div id="static">
-				<!-- about blurb -->
-				<div class="post text">					
+		<div id="static">
+			<!-- about blurb -->
+			<div class="post text">					
 				<p>Flaming Entertainment is a small but firey game developer. We set out to make games about interesting people in fascinating places. We are currently working on our first game.</p>
-				</div>
+			</div>
 
-				<!-- about peeps -->
-				<div class="post text">
-					 <div class="dateline">Patrick Raynor</div>
-					 <p>is the founder and current all seeing creative director and technologist.</p>
-				</div>
-				
- 			</div>
-
-		<p id="footer">
-			
-		</p>
+			<!-- about peeps -->
+			<div class="post text">
+				 <div class="dateline">Patrick Raynor</div>
+				 <p>is the founder and current all seeing creative director and technologist.</p>
+			</div>	
+ 		</div>
+	</div>
+	
+	<!-- footer -->
+	<div class="footer">
+		&copy; AresLabs, LLC dba Flaming Entertainment 2013-2018 &nbsp; &nbsp;</a>
 	</div>
 	
 	<!-- scripts to control background color switching -->
