--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
 		</ul>
 	</div>
 	
+	<!-- footer -->
+	<div class="footer">
+		&copy; AresLabs, LLC dba Flaming Entertainment 2013-2018 &nbsp; &nbsp;</a>
+	</div>
+	
 	<!-- scripts to control background color switching -->
 	<script src="assets/js/jquery.color.js"></script>
 	<script>var ie8 = false;</script>
