Added WIP video and screenshots section to Trigger page

--- a/trigger/index.html
+++ b/trigger/index.html
@@ -46,6 +46,26 @@
 		<h3>Coming soon.</h3>
 	</div>
 
+	<!-- video -->
+	<!-- 
+	<div class="box video auto-resizable-iframe">
+		<div>
+			<iframe src="https://www.youtube.com/embed/KrGpCiJJ-cI?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</div>
+	-->
+	
+	<!-- screenshots -->
+	<!-- 
+	<div class="box screenshots">
+		<div>
+			<a href="http://i.imgur.com/bloop.png" target="_blank"><img width="200px" src="http://i.imgur.com/FVCiylVm.png" /></a>&nbsp;&nbsp;
+			<a href="http://i.imgur.com/bloop.png" target="_blank"><img width="200px" src="http://i.imgur.com/isX58Wmm.png" /></a>&nbsp;&nbsp;
+			<a href="http://i.imgur.com/bloop.png" target="_blank"><img width="200px" src="http://i.imgur.com/f6VQpWkm.png" /></a>
+		</div>
+	</div>
+	-->
+
 	<!-- footer -->
 	<div class="footer">
 		&copy; AresLabs, LLC dba Flaming Entertainment 2013-2018 &nbsp; &nbsp;</a>
