Switched to Trigger logo on Trigger page

--- a/trigger/index.html
+++ b/trigger/index.html
@@ -35,8 +35,8 @@
 	<div class="overlay" id="background-container"></div>
 
 	<!-- logo -->
-	<div class="logocontain">
-		<div class="cakelogo"></div>
+	<div class="logo2contain">
+		<div class="triggerlogo"></div>
 	</div>
 
 	<!-- blurb -->
