Adding new gradient body styles and removing old JS color switcher

--- a/trigger/index.html
+++ b/trigger/index.html
@@ -7,8 +7,6 @@
 	<link type="text/css" rel="stylesheet" href="../assets/css/main.css"/>
 	<link type="text/css" rel="stylesheet" href="../assets/css/nav.css"/>
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-	<script src="../assets/js/wizard.js"></script>
 
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Flaming Entertainment">
@@ -20,7 +18,7 @@
 	<title>Flaming Entertainment | Trigger</title>
 </head>
 
-<body class="cake">
+<body class="trigger">
 	<!-- navigation bar -->
 	<ul class="navbar-top">
 		<li id="nav-company"><a href="http://www.flamingent.com"><strong>Flaming Ent</strong></a></li>
@@ -30,9 +28,6 @@
 		<li id="nav-game"><a href="http://www.flamingent.com/trigger"><strong>Trigger</strong></a></li>
 	</ul>
 	<script>document.getElementById("nav-game").className += " current";</script>
-
-	<!-- overlay -->
-	<div class="overlay" id="background-container"></div>
 
 	<!-- logo -->
 	<div class="logo2contain">
@@ -70,18 +65,6 @@
 	<div class="footer">
 		&copy; AresLabs, LLC dba Flaming Entertainment 2013-2018 &nbsp; &nbsp;</a>
 	</div>
-
-	<!-- scripts to control background color switching -->
-    <script>
-    	$(function(){
-			var hues = ["#046c36", "#6c5b04", "#ad4200"];
-			var elements = [
-				[ $("body"), "backgroundColor" ],
-				[ $(".post p a, .post a.dateline"), "color" ]
-			];
-			wizard(elements, hues, 15000);
-		});
-    </script>
 	
 	<!-- google analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-6676785-5"></script>
