Changing presskit link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				</span>
 			</li>
 			<li>
-				<a href="presskit/">Presskit</a>
+				<a href="http://press.flamingent.com">Presskit</a>
 			</li>
 		</ul>
 	</div>
