Fix bad links in navigation bar

--- a/about.html
+++ b/about.html
@@ -21,11 +21,12 @@
 <body class="about">
 	<!-- navigation bar -->
 	<ul class="navbar-top">
-		<li id="nav-company"><a href="http://www.flamingent.com"><strong>Flaming Ent</strong></a></li>
-		<li id="nav-review"><a href="https://flamingent.com/cake"><strong><span class="collapse">Cake</span><span class="reveal">Engine</span></strong></a></li>
+		<li id="nav-company"><a href="http://flamingent.com"><strong>Flaming Ent</strong></a></li>
+		<li id="nav-review"><a href="http://flamingent.com/cake"><strong><span class="collapse">Cake</span><span class="reveal">Engine</span></strong></a></li>
 		<li id="nav-github"><a href="http://github.com/flamingent"><strong><span class="collapse">Source </span>Code</strong></a></li>
 		<li id="nav-blog"><a href="http://blog.flamingent.com"><strong><span class="collapse">Development </span>Blog</strong></a></li>
-		<li id="nav-game"><a href="http://www.flamingent.com/trigger"><strong>Trigger</strong></a></li>
+		<li id="nav-game"><a href="http://
+		flamingent.com/trigger"><strong>Trigger</strong></a></li>
 	</ul>
 	<script>document.getElementById("nav-company").className += " current";</script>
 
