--- a/about.html
+++ b/about.html
@@ -25,8 +25,7 @@
 		<li id="nav-review"><a href="http://flamingent.com/cake"><strong><span class="collapse">Cake</span><span class="reveal">Engine</span></strong></a></li>
 		<li id="nav-github"><a href="http://github.com/flamingent"><strong><span class="collapse">Source </span>Code</strong></a></li>
 		<li id="nav-blog"><a href="http://blog.flamingent.com"><strong><span class="collapse">Development </span>Blog</strong></a></li>
-		<li id="nav-game"><a href="http://
-		flamingent.com/trigger"><strong>Trigger</strong></a></li>
+		<li id="nav-game"><a href="http://flamingent.com/trigger"><strong>Trigger</strong></a></li>
 	</ul>
 	<script>document.getElementById("nav-company").className += " current";</script>
 
